[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "historia-mcp"
version = "0.1.4"
description = "Kenya and Africa historical archives via MCP. 6 tools."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = ["fastmcp>=0.9"]

[project.scripts]
historia-mcp = "historia_mcp.server:mcp.run"

[project.urls]
Homepage = "https://github.com/gabrielmahia/historia-mcp"
Documentation = "https://github.com/gabrielmahia/nairobi-stack"
"MCP Registry" = "https://registry.modelcontextprotocol.io"
Datasets = "https://huggingface.co/gmahia"
Evaluation = "https://github.com/gabrielmahia/kipimo"
[tool.setuptools.packages.find]
where = ["src"]
